# PhantomPersona

./: .env.example  .gitignore  Caddyfile  LICENSE  PLAN.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3f05e5f2203c_initial_schema.py
backend/app/: config.py  db.py  dependencies.py  main.py  middleware.py
backend/app/models/: noise_event.py  persona.py  plan.py  user.py
backend/app/routers/: auth.py  noise.py  personas.py  plans.py
backend/app/schemas/: auth.py  noise.py  persona.py  plan.py
backend/app/services/: auth.py  llm.py  persona_gen.py  plan_gen.py  scheduler.py
backend/tests/: conftest.py  test_auth.py  test_llm.py  test_noise.py  test_personas.py  test_plans.py
daemon/: .dockerignore  Dockerfile  config.yaml  pyproject.toml
daemon/phantom_engine/: config.py  llm.py  main.py  scheduler.py  server.py
daemon/src/phantom_daemon/: main.py
extension/: background.js  content.js  manifest.json
extension/lib/: behavioral.js  fingerprint.js  phantom-browser.js
extension/popup/: popup.html  popup.js
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
web/pages/: index.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/activity/: page.tsx
web/src/app/login/: page.tsx
web/src/app/personas/[id]/: page.tsx
web/src/app/personas/new/: page.tsx
web/src/components/: ActivityFeed.tsx  NoiseScore.tsx  PersonaCard.tsx  PersonaWizard.tsx
web/src/lib/: api.ts  auth.tsx
